apps/playground/simple/istio/virtual-service.yaml
# https://istio.io/latest/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api
spec:
  hosts:
    - api-stable.playground.svc.cluster.local
  # hosts:
  #   - istio-playground.argoproj.io
  # gateways:
  #   - playground-gateway
  http:
  - name: primary # referenced in canary.trafficRouting.istio.virtualService.routes
    route:
    - destination:
        host: api-stable # referenced in canary.stableService
      weight: 100
    - destination:
        host: api-preview # referenced in canary.canaryService
      weight: 0
